--- a/packages/blocks-next/src/blocks/cart-header/style.scss
+++ b/packages/blocks-next/src/blocks/cart-header/style.scss
@@ -5,6 +5,16 @@
 	width: 100%;
 	border-bottom: var(--sc-drawer-border);
 
+	button {
+		background: none;
+		border: none;
+		box-shadow: none;
+		padding: 0;
+		margin: 0;
+		cursor: pointer;
+		color: var(--sc-primary-color);
+	}
+
 	&__title {
 		text-align: center;
 		overflow: hidden;
