--- a/packages/blocks-next/src/blocks/cart-items/style.scss
+++ b/packages/blocks-next/src/blocks/cart-items/style.scss
@@ -1,6 +1,8 @@
 .wp-block-surecart-cart-items__wrapper {
-	min-height: 400px;
 	border-bottom: var(--sc-drawer-border);
+	flex: 1 1 auto;
+    overflow: auto;
+    min-height: 200px;
 
 	.sc-quantity-selector {
 		margin-top: --var(sc-spacing-small);
