--- a/packages/blocks-next/src/styles/product-line-item.scss
+++ b/packages/blocks-next/src/styles/product-line-item.scss
@@ -129,6 +129,10 @@
 		display: block;
 		box-shadow: var(--sc-input-box-shadow);
 		align-self: flex-start;
+
+		&[hidden] {
+			display: none;
+		}
 	}
 
 	&__product__description {
