Quantity increase-decrease and change actions added for line item

--- a/packages/blocks-next/src/blocks/cart-items/style.scss
+++ b/packages/blocks-next/src/blocks/cart-items/style.scss
@@ -5,7 +5,7 @@
 	min-height: 200px;
 
 	.sc-quantity-selector {
-		margin-top: --var(sc-spacing-small);
+		margin-top: var(--sc-spacing-small);
 	}
 
 	.sc-product-line-item__remove-button {
