Refactor to use default WordPress loop

--- a/packages/blocks-next/src/blocks/product-pagination-next/style.scss
+++ b/packages/blocks-next/src/blocks/product-pagination-next/style.scss
@@ -12,4 +12,10 @@
 	&:focus:not(:focus-visible) {
 		outline: none;
 	}
+
+	&[aria-disabled] {
+		pointer-events: none;
+		text-decoration: none;
+		opacity: 0.5;
+	}
 }
