Show installement price in subtotal block

--- a/packages/blocks-next/src/styles/product-line-item.scss
+++ b/packages/blocks-next/src/styles/product-line-item.scss
@@ -2,6 +2,10 @@
 	display: block;
 	font-family: var(--sc-font-sans);
 
+	&[hidden] {
+		display: none;
+	}
+
 	&__item {
 		box-sizing: border-box;
 		margin: 0px;
