Implement remove discount buttons functionality

--- a/packages/blocks-next/src/blocks/cart-coupon/style.scss
+++ b/packages/blocks-next/src/blocks/cart-coupon/style.scss
@@ -14,6 +14,8 @@
 			padding: 0px;
 			cursor: pointer;
 			margin-left: 0.5em;
+			color: var(--sc-color-gray-700);
+			box-shadow: none;
 
 			svg {
 				width: 16px;
