Show Human readable discount for coupon and better UI handling

--- a/packages/blocks-next/src/styles/coupon-form.scss
+++ b/packages/blocks-next/src/styles/coupon-form.scss
@@ -86,6 +86,10 @@
 		align-items: flex-start;
 		text-align: left;
 
+		&[hidden] {
+			display: none;
+		}
+
 		sc-icon {
 			flex: 0 0 1em;
 			margin-top: 0.25em;
