--- a/packages/blocks-next/src/blocks/product-image/style.scss
+++ b/packages/blocks-next/src/blocks/product-image/style.scss
@@ -1,7 +1,7 @@
 .wp-block-surecart-product-image {
 	overflow: hidden;
-	aspect-ratio: 4 / 3;
-
+	aspect-ratio: 1 / 1.33;
+	margin-top: 0;
 	img {
 		max-width: 100%;
 		width: 100%;
