--- a/templates/templates/single-sc_product.html
+++ b/templates/templates/single-sc_product.html
@@ -9,7 +9,10 @@
 
 		<!-- wp:column {"width":"50%"} -->
 		<div class="wp-block-column" style="flex-basis:50%">
-			<!-- wp:surecart/product-collection-badges-v2 {"count":"1","style":{"typography":{"fontSize":"14px"}}} /-->
+			<!-- wp:surecart/product-collection-badges-v2 {"count":5} -->
+			<!-- wp:surecart/product-collection-badge /-->
+			<!-- /wp:surecart/product-collection-badges-v2 -->
+			<!-- wp:surecart/product-title-v2 /-->
 			<!-- wp:surecart/product-title-v2 /-->
 
 			<!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"constrained"}} -->
