make sure disabled state applies for the button when unavailable

--- a/packages/blocks-next/src/styles/wp-button.scss
+++ b/packages/blocks-next/src/styles/wp-button.scss
@@ -2,9 +2,21 @@
 	width: 100%;
 
 	&.is-style-outline {
-		button.wp-block-button__link.wp-element-button:not(.has-background, :hover, :focus),
-		div.wp-block-button__link.wp-element-button:not(.has-background, :hover, :focus),
-		a.wp-block-button__link.wp-element-button:not(.has-background, :hover, :focus) {
+		button.wp-block-button__link.wp-element-button:not(
+				.has-background,
+				:hover,
+				:focus
+			),
+		div.wp-block-button__link.wp-element-button:not(
+				.has-background,
+				:hover,
+				:focus
+			),
+		a.wp-block-button__link.wp-element-button:not(
+				.has-background,
+				:hover,
+				:focus
+			) {
 			background-color: transparent;
 			background-image: none;
 		}
@@ -23,7 +35,7 @@
 	display: inline-block;
 	box-sizing: border-box;
 
-	[disabled] {
+	&[disabled] {
 		pointer-events: none;
 	}
 }
