Update the product media to use updated block

--- a/templates/parts/product-info.html
+++ b/templates/parts/product-info.html
@@ -1,7 +1,7 @@
 <!-- wp:surecart/product-page -->
 <!-- wp:columns {"style":{"spacing":{"blockGap":{"top":"30px","left":"60px"}}}} -->
 <div class="wp-block-columns"><!-- wp:column {"width":"50%"} -->
-	<div class="wp-block-column" style="flex-basis:50%"><!-- wp:surecart/product-media-v2 /--></div>
+	<div class="wp-block-column" style="flex-basis:50%"><!-- wp:surecart/product-media /--></div>
 	<!-- /wp:column -->
 
 	<!-- wp:column {"width":"50%"} -->
