Update the template to use the correct product title

--- a/templates/templates/single-sc_product.html
+++ b/templates/templates/single-sc_product.html
@@ -12,8 +12,7 @@
 			<!-- wp:surecart/product-collection-badges-v2 {"count":1} -->
 			<!-- wp:surecart/product-collection-badge /-->
 			<!-- /wp:surecart/product-collection-badges-v2 -->
-			<!-- wp:surecart/product-title-v2 /-->
-			<!-- wp:surecart/product-title-v2 /-->
+			<!-- wp:surecart/product-title /-->
 
 			<!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"constrained"}} -->
 			<div class="wp-block-group">
