--- a/packages/blocks-next/src/blocks/cart/style.scss
+++ b/packages/blocks-next/src/blocks/cart/style.scss
@@ -5,4 +5,16 @@
 	margin: auto;
 	border: var(--sc-drawer-border);
 	box-shadow: 0 1px 2px #0d131e1a;
+
+	.sc-alert {
+		&__icon svg {
+			width: 24px;
+			height: 24px;
+		}
+
+		*:not(:first-child) {
+			margin-top: 0.5rem;
+			margin-bottom: 0;
+		}
+	}
 }
