--- a/packages/blocks-next/src/blocks/cart-coupon/style.scss
+++ b/packages/blocks-next/src/blocks/cart-coupon/style.scss
@@ -17,6 +17,12 @@
 			color: var(--sc-color-gray-700);
 			box-shadow: none;
 
+			&:focus {
+				outline: none;
+				box-shadow: 0 0 0 var(--sc-focus-ring-width)
+					var(--sc-focus-ring-color-primary);
+			}
+
 			svg {
 				width: 16px;
 				height: 16px;
