--- a/packages/blocks-next/src/blocks/product-template/style.scss
+++ b/packages/blocks-next/src/blocks/product-template/style.scss
@@ -1,9 +1,8 @@
 .wp-block-surecart-product-template {
 	width: 100%; // prevent collapsing during loading.
 	list-style: none;
-	margin-bottom: 0;
-	margin-top: 0;
 	max-width: 100%;
+	margin: 0;
 	padding: 0;
 }
 
