Don't show quantity selector if ad hoc or has bump amount

--- a/packages/blocks-next/src/blocks/cart-items/style.scss
+++ b/packages/blocks-next/src/blocks/cart-items/style.scss
@@ -6,6 +6,10 @@
 
 	.sc-quantity-selector {
 		margin-top: var(--sc-spacing-small);
+
+		&[hidden] {
+			display: none;
+		}
 	}
 
 	.sc-product-line-item__remove-button {
