--- a/templates/templates/single-sc_product.html
+++ b/templates/templates/single-sc_product.html
@@ -40,15 +40,15 @@
 
 
 			<!-- wp:surecart/product-price-choices-v2 -->
-			<!-- wp:surecart/product-price-choice-template -->
+			<!-- wp:surecart/product-price-choice-template  {"style":{"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"textColor":"black"} -->
 			<!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"space-between"}} -->
 			<div class="wp-block-group"><!-- wp:surecart/price-name /-->
 
 				<!-- wp:group {"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right"}} -->
 				<div class="wp-block-group">
-					<!-- wp:surecart/price-amount {"style":{"elements":{"link":{"color":{"text":"var:preset|color|accent-3"}}},"typography":{"fontStyle":"normal","fontWeight":"700"}},"textColor":"accent-3"} /-->
+					<!-- wp:surecart/price-amount {"style":{"typography":{"fontStyle":"normal","fontWeight":"700"}}} /-->
 
-					<!-- wp:surecart/price-trial {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
+					<!-- wp:surecart/price-trial {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"}  /-->
 
 					<!-- wp:surecart/price-setup-fee {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
 				</div>
