--- a/packages/blocks-next/src/blocks/cart-menu-button/style.scss
+++ b/packages/blocks-next/src/blocks/cart-menu-button/style.scss
@@ -1,8 +1,34 @@
 .wp-block-surecart-cart-menu-icon-v2 {
-	svg {
+	position: relative;
+	display: inline-block;
+	vertical-align: middle;
+	line-height: 1;
+
+	.sc-cart-icon {
+		font-size: var(--sc-cart-icon-size, 1.1em);
 		cursor: pointer;
-		width: 40px;
-		height: 40px;
-		padding: 10px;
+	}
+
+	.sc-cart-count {
+		box-sizing: border-box;
+		position: absolute;
+		inset: -12px -16px auto auto;
+		text-align: center;
+		font-size: 10px;
+		font-weight: bold;
+		border-radius: var(--sc-cart-icon-counter-border-radius, 9999px);
+		color: var(
+			--sc-cart-icon-counter-color,
+			var(--sc-color-primary-text, var(--sc-color-white))
+		);
+		background: var(
+			--sc-cart-icon-counter-background,
+			var(--sc-color-primary-500)
+		);
+		box-shadow: var(--sc-cart-icon-box-shadow, var(--sc-shadow-x-large));
+		padding: 2px 6px;
+		line-height: 14px;
+		min-width: 14px;
+		z-index: 1;
 	}
 }
