Cart menu button edit page ui updated with choices css

--- a/packages/blocks-next/src/blocks/cart-menu-button/editor.scss
+++ b/packages/blocks-next/src/blocks/cart-menu-button/editor.scss
@@ -1,13 +1,3 @@
-.sc-cart-choicer {
-	display: flex;
-	gap: 10px;
-
-	svg {
-		border: 1px solid transparent;
-
-		&.active {
-			border: 1px solid var(--sc-color-gray-200);
-			border-radius: 10px;
-		}
-	}
+.sc-choices {
+	grid-template-columns: repeat(var(--columns, 2), 60px) !important;
 }
