Update the price choice admin to use adjustable layout

--- a/templates/templates/single-sc_product.html
+++ b/templates/templates/single-sc_product.html
@@ -38,6 +38,7 @@
 
 
 			<!-- wp:surecart/product-price-choices-v2 -->
+			<!-- wp:surecart/product-price-choices-template {"layout":{"type":"grid","columnCount":2}} -->
 			<!-- wp:surecart/product-price-choice-template -->
 			<!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"space-between"}} -->
 			<div class="wp-block-group"><!-- wp:surecart/price-name /-->
@@ -54,7 +55,9 @@
 			</div>
 			<!-- /wp:group -->
 			<!-- /wp:surecart/product-price-choice-template -->
+			<!-- /wp:surecart/product-price-choices-template -->
 			<!-- /wp:surecart/product-price-choices-v2 -->
+
 			<!-- wp:surecart/product-quantity-v2 /-->
 			<!-- wp:surecart/product-selected-price-ad-hoc-amount /-->
 			<!-- wp:surecart/product-buy-buttons-v2 -->
