add the variant pill selector

--- a/templates/templates/single-sc_product.html
+++ b/templates/templates/single-sc_product.html
@@ -36,6 +36,11 @@
 
 			<!-- wp:surecart/product-description-v2 /-->
 
+			<!-- wp:surecart/product-variant-pills -->
+			<!-- wp:surecart/product-variant-pills-wrapper -->
+			<!-- wp:surecart/product-variant-pill /-->
+			<!-- /wp:surecart/product-variant-pills-wrapper -->
+			<!-- /wp:surecart/product-variant-pills -->
 
 			<!-- wp:surecart/product-price-choices-v2 -->
 			<!-- wp:surecart/product-price-choices-template {"layout":{"type":"grid","columnCount":2}} -->
