--- a/templates/templates/single-sc_product.html
+++ b/templates/templates/single-sc_product.html
@@ -43,12 +43,12 @@
 			<!-- /wp:surecart/product-variant-pills -->
 
 			<!-- wp:surecart/product-price-choices-v2 -->
-			<!-- wp:surecart/product-price-choices-template {"layout":{"type":"grid","columnCount":2}} -->
+			<!-- wp:surecart/product-price-choices-template {"layout":{"type":"grid","columnCount":1}} -->
 			<!-- wp:surecart/product-price-choice-template -->
 			<!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"space-between"}} -->
 			<div class="wp-block-group"><!-- wp:surecart/price-name /-->
 
-				<!-- wp:group {"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right"}} -->
+				<!-- wp:group {"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right","flexWrap":"wrap"}} -->
 				<div class="wp-block-group">
 					<!-- wp:surecart/price-amount {"style":{"elements":{"link":{"color":{"text":"var:preset|color|accent-3"}}},"typography":{"fontStyle":"normal","fontWeight":"700"}},"textColor":"accent-3"} /-->
 
