--- a/templates/templates/single-sc_product.html
+++ b/templates/templates/single-sc_product.html
@@ -1,7 +1,7 @@
 <!-- wp:template-part {"slug":"header","tagName":"header"} /-->
 
-<!-- wp:group {"layout":{"type":"default"}} -->
-<div class="wp-block-group"><!-- wp:surecart/product-page -->
+<!-- wp:group {"layout":{"type":"default"},"layout":{"type":"constrained"}} -->
+<div class="wp-block-group"><!-- wp:surecart/product-page {"align":"wide"} -->
 	<!-- wp:columns {"style":{"spacing":{"blockGap":{"top":"30px","left":"60px"}}}} -->
 	<div class="wp-block-columns"><!-- wp:column {"width":"50%"} -->
 		<div class="wp-block-column" style="flex-basis:50%"><!-- wp:surecart/product-media-v2 /--></div>
@@ -12,7 +12,7 @@
 			<!-- wp:surecart/product-collection-badges-v2 {"count":"1","style":{"typography":{"fontSize":"14px"}}} /-->
 			<!-- wp:surecart/product-title-v2 /-->
 
-			<!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"constrained"}} -->
+			<!-- wp:group {"style":{"spacing":{"blockGap":"0"}}} -->
 			<div class="wp-block-group">
 				<!-- wp:group {"style":{"spacing":{"blockGap":"0.5em"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"left"}} -->
 				<div class="wp-block-group">
@@ -45,14 +45,15 @@
 			<!-- wp:surecart/product-price-choices-v2 -->
 			<!-- wp:surecart/product-price-choices-template {"layout":{"type":"grid","columnCount":1}} -->
 			<!-- wp:surecart/product-price-choice-template -->
-			<!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"space-between"}} -->
-			<div class="wp-block-group"><!-- wp:surecart/price-name /-->
+			<!-- wp:group {"style":{"spacing":{"blockGap":"10px"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
+			<div class="wp-block-group">
+				<!-- wp:surecart/price-name {"style":{"layout":{"selfStretch":"fixed","flexSize":"50%"}}} /-->
 
-				<!-- wp:group {"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right","flexWrap":"wrap"}} -->
+				<!-- wp:group {"style":{"spacing":{"blockGap":"0px"},"layout":{"selfStretch":"fixed","flexSize":"50%"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right","flexWrap":"nowrap","verticalAlignment":"center"}} -->
 				<div class="wp-block-group">
 					<!-- wp:surecart/price-amount {"style":{"elements":{"link":{"color":{"text":"var:preset|color|accent-3"}}},"typography":{"fontStyle":"normal","fontWeight":"700"}},"textColor":"accent-3"} /-->
 
-					<!-- wp:surecart/price-trial {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
+					<!-- wp:surecart/price-trial {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}},"layout":{"selfStretch":"fit","flexSize":null}},"fontSize":"small"} /-->
 
 					<!-- wp:surecart/price-setup-fee {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
 				</div>
