--- a/packages/blocks-next/src/blocks/cart-menu-button/style.scss
+++ b/packages/blocks-next/src/blocks/cart-menu-button/style.scss
@@ -7,6 +7,10 @@
 	.sc-cart-icon {
 		font-size: var(--sc-cart-icon-size, 1.1em);
 		cursor: pointer;
+
+		svg {
+			color: var(--sc-color-white);
+		}
 	}
 
 	.sc-cart-count {
