Fixed coupon input background color on dark mode

--- a/packages/blocks-next/src/styles/form-control.scss
+++ b/packages/blocks-next/src/styles/form-control.scss
@@ -63,7 +63,7 @@
 
 	&:focus {
 		color: var(--sc-input-color-focus);
-		background-color: var(--sc-input-background-color-focus);
+		background-color: var(--sc-input-background-color-focus) !important;
 		border-color: var(--sc-input-border-color-focus) !important;
 		outline: 0;
 		box-shadow: 0 0 0 var(--sc-focus-ring-width)
