Dark mode quantity selector input

--- a/packages/blocks-next/src/styles/input-group.scss
+++ b/packages/blocks-next/src/styles/input-group.scss
@@ -4,7 +4,7 @@
 	flex-wrap: wrap;
 	align-items: stretch;
 	width: 100%;
-	border: var(--sc-input-border-width) solid var(--sc-color-gray-300);
+	border: var(--sc-input-border);
 	background-color: var(--sc-input-background-color);
 	border-radius: var(--sc-border-radius-medium);
 	transition: var(--sc-transition-medium);
