Fixed Checkout button styles

--- a/packages/blocks-next/src/blocks/cart-submit/style.scss
+++ b/packages/blocks-next/src/blocks/cart-submit/style.scss
@@ -14,7 +14,8 @@
 		}
 	}
 
-	.wp-block-button {
+	&.wp-block-buttons > .wp-block-button {
+		display: block;
 		width: 100%;
 		text-decoration: none !important;
 	}
