Update to display the purchasable status of a line item

--- a/packages/components/src/components/ui/product-line-item/sc-product-line-item.scss
+++ b/packages/components/src/components/ui/product-line-item/sc-product-line-item.scss
@@ -107,6 +107,11 @@
   align-self: flex-start;
 }
 
+.product-line-item__purchasable-status {
+  font-size: var(--sc-font-size-x-small);
+  color: var(--sc-input-error-text-color);
+}
+
 .item__price {
   text-align: right;
   max-width: 100%;
