--- a/templates/parts/product-info.html
+++ b/templates/parts/product-info.html
@@ -40,7 +40,7 @@
 		<!-- /wp:surecart/product-variant-pills -->
 
 		<!-- wp:surecart/product-price-choices-v2 -->
-		<!-- wp:surecart/product-price-choices-template {"layout":{"type":"grid","columnCount":2}} -->
+		<!-- wp:surecart/product-price-choices-template {"style":{"spacing":{"padding":{"top":"0","bottom":"0","left":"0","right":"0"},"blockGap":"var:preset|spacing|20"}},"layout":{"type":"grid","columnCount":2,"justifyContent":"stretch","orientation":"vertical","flexWrap":"nowrap","verticalAlignment":"center"}} -->
 		<!-- wp:surecart/product-price-choice-template -->
 		<!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"space-between"}} -->
 		<div class="wp-block-group"><!-- wp:surecart/price-name /-->
