--- a/packages/blocks-next/src/styles/wp-buttons.scss
+++ b/packages/blocks-next/src/styles/wp-buttons.scss
@@ -1,5 +1,7 @@
 .wp-block-buttons {
 	width: 100%;
+	max-width: -webkit-fill-available;
+	max-width: -moz-available;
 
 	&.is-vertical {
 		flex-direction: column;
