Fix form control color

--- a/packages/components/src/themes/base.css
+++ b/packages/components/src/themes/base.css
@@ -721,6 +721,7 @@ sc-checkout [hidden] {
 .surecart-theme-dark sc-heading,
 .surecart-theme-dark sc-form-row,
 .surecart-theme-dark sc-form-control,
+.surecart-theme-dark .sc-form-control,
 .surecart-theme-dark sc-menu-label,
 .surecart-theme-dark sc-customer-details,
 .surecart-theme-dark .menu-item,
