update the default template

--- a/templates/templates/single-sc_product.html
+++ b/templates/templates/single-sc_product.html
@@ -49,39 +49,37 @@
 			<!-- wp:surecart/product-price-choice-template {"layout":{"type":"flex","justifyContent":"left","flexWrap":"nowrap","orientation":"vertical"}} -->
 			<!-- wp:surecart/price-name /-->
 
-			<<<<<<< HEAD <!-- wp:group
+			<!-- wp:group
 				{"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right","flexWrap":"wrap"}}
 				-->
+			<div class="wp-block-group">
+				<!-- wp:surecart/price-amount {"style":{"typography":{"fontStyle":"normal","fontWeight":"700"}}} /-->
+
+				<!-- wp:surecart/price-trial {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"}  /-->
+				<!-- wp:group {"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right"}} -->
 				<div class="wp-block-group">
-					<!-- wp:surecart/price-amount {"style":{"typography":{"fontStyle":"normal","fontWeight":"700"}}} /-->
+					<!-- wp:surecart/price-amount {"style":{"elements":{"link":{"color":{"text":"var:preset|color|accent-3"}}},"typography":{"fontStyle":"normal","fontWeight":"700"}},"textColor":"accent-3"} /-->
 
-					<!-- wp:surecart/price-trial {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"}  /-->
-					=======
-					<!-- wp:group {"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"right"}} -->
-					<div class="wp-block-group">
-						<!-- wp:surecart/price-amount {"style":{"elements":{"link":{"color":{"text":"var:preset|color|accent-3"}}},"typography":{"fontStyle":"normal","fontWeight":"700"}},"textColor":"accent-3"} /-->
+					<!-- wp:surecart/price-trial {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
 
-						<!-- wp:surecart/price-trial {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
-						>>>>>>> rashon/sur-158-migrate-product-page-interactivity
-
-						<!-- wp:surecart/price-setup-fee {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
-					</div>
-					<!-- /wp:group -->
-					<!-- /wp:surecart/product-price-choice-template -->
-					<!-- /wp:surecart/product-price-choices-template -->
-					<!-- /wp:surecart/product-price-choices-v2 -->
-
-					<!-- wp:surecart/product-quantity /-->
-					<!-- wp:surecart/product-selected-price-ad-hoc-amount /-->
-					<!-- wp:surecart/product-buy-buttons -->
-					<div class="wp-block-surecart-product-buy-buttons wp-block-buttons sc-block-buttons is-layout-flex">
-						<!-- wp:surecart/product-buy-button {"add_to_cart":true,"text":"Add To Cart"} /-->
-
-						<!-- wp:surecart/product-buy-button {"text":"Buy Now","style":"outline"} /-->
-					</div>
-					<!-- /wp:surecart/product-buy-buttons -->
+					<!-- wp:surecart/price-setup-fee {"style":{"color":{"text":"#8a8a8a"},"elements":{"link":{"color":{"text":"#8a8a8a"}}}},"fontSize":"small"} /-->
 				</div>
-				<!-- /wp:column -->
+				<!-- /wp:group -->
+				<!-- /wp:surecart/product-price-choice-template -->
+				<!-- /wp:surecart/product-price-choices-template -->
+				<!-- /wp:surecart/product-price-choices-v2 -->
+
+				<!-- wp:surecart/product-quantity /-->
+				<!-- wp:surecart/product-selected-price-ad-hoc-amount /-->
+				<!-- wp:surecart/product-buy-buttons -->
+				<div class="wp-block-surecart-product-buy-buttons wp-block-buttons sc-block-buttons is-layout-flex">
+					<!-- wp:surecart/product-buy-button {"add_to_cart":true,"text":"Add To Cart"} /-->
+
+					<!-- wp:surecart/product-buy-button {"text":"Buy Now","style":"outline"} /-->
+				</div>
+				<!-- /wp:surecart/product-buy-buttons -->
+			</div>
+			<!-- /wp:column -->
 		</div>
 		<!-- /wp:columns -->
 		<!-- /wp:surecart/product-page -->
