--- a/templates/parts/product-info.html
+++ b/templates/parts/product-info.html
@@ -11,7 +11,7 @@
 		<!-- /wp:surecart/product-collection-badges-v2 -->
 		<!-- wp:surecart/product-title /-->
 		<!-- wp:surecart/product-collection-badges-v2 {"count":"1","style":{"typography":{"fontSize":"14px"}}} /-->
-		<!-- wp:surecart/product-list-title /-->
+		<!-- wp:surecart/product-title /-->
 
 		<!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"constrained"}} -->
 		<div class="wp-block-group">
