Update to have a default of white color for the sales badge

--- a/templates/parts/product-info.html
+++ b/templates/parts/product-info.html
@@ -21,7 +21,7 @@
 
 				<!-- wp:surecart/product-selected-price-amount {"style":{"typography":{"fontSize":"24px"}}} /-->
 
-				<!-- wp:surecart/product-sale-badge {"text":"Discounted","style":{"border":{"radius":"100px"},"typography":{"fontSize":"12px"},"layout":{"selfStretch":"fit","flexSize":null}}} /-->
+				<!-- wp:surecart/product-sale-badge {"text":"Discounted","style":{"border":{"radius":"100px"},"typography":{"fontSize":"12px"},"layout":{"selfStretch":"fit","flexSize":null},"elements":{"link":{"color":{"text":"var:preset|color|white"}}}},"textColor":"white"} /-->
 			</div>
 			<!-- /wp:group -->
 
